--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "http-errors": "^1.8.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb-memory-server": "^7.4.2",
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
